- Removed the --with-gui flag for linux/configure and mac/configure (use the Flutter GUI instead)
- Fix: segmentation fault in using hardsubx
- New: Add function (and command) that extracts closed caption subtitles as well as burnt-in subtitles from a file in a single pass. (As proposed in issue 726)
- Refactored: the `general_loop` function has some code moved to a new function


0.94 (2021-12-14)
-----------------
- BOM is no longer enabled by default on windows platforms
- CEA-708: Rust decoder is now default instead of C decoder
- CEA-708 subs are now extracted by default
- New: Add check for Minimum supported rust version (MSRV) (#1387) 
- Fix: Fix CEA-708 Carriage Return command implementation
- Fix: Fix bug with startat/endat parameter (#1396)
- Fix: Mac Build processes (#1390)
- Fix: Fix bug with negative delay parameter (#1365)

0.93 (2021-08-16)
-----------------
- Minor Rust updates (format, typos, docs)
- Updated GUI

0.92 (2021-08-10)
-----------------
- Rust updates: Added srt writer
- Rust updates:-Added writers for transcripts and SAMI
- Added missing DLL to Windows installer
- Updated Windows GUI

0.91 (2021-07-26)
-----------------
- More Rust in the 708 decoder (Add Pen Presets and timing functions)
- Updated GUI

0.90 (2021-07-14)
-----------------
- New installer (WiX based)
- New GUI (flutter based)
- More Rust (the 708 decoder is being rewritten)

0.89 (2021-06-13)
-----------------
- Fix: Fix broken links in README
- Fix: Timing in DVB, sub duration check for timeout.
- New: Added support for SCC and CCD encoder formats
- New: Added support to output captions to MCC file (#733).
- New: Add support for censoring words ("Kid Friendly") (#1139)
- New: Extend support of capitalization for all BITMAP and 608 subtitles (#1214)
- New: Added an option to disable timestamps for WebVTT (In response to issue #1127)
- Fix: Change inet_ntop to inet_ntoa for Windows XP compatibility